# Simple-queue-example

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
docs/: assumptions.md  requirements.md
sendcloud/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
sendcloud_assignment/: api.py  apps.py  constants.py  tasks.py  views.py
sendcloud_assignment/tests/: conftest.py  test_endpoints.py
